packages/cashc/test/compiler/ParseError/invalid_date.cash
pragma radiantscript ^0.1.0;

contract Test() {
    function test() {
        int d = date("not a date");
        require(d == 0);
    }
}
